fix tooltip behind issue

--- a/src/assets/styles/_nav.scss
+++ b/src/assets/styles/_nav.scss
@@ -246,7 +246,7 @@ body {
   top: 68px;
   background-color: #f4f5f7;
   box-shadow: 3px 0 6px 0 rgba(0, 0, 0, 0.16);
-  z-index: 100000;
+  z-index: 100;
   transition: transform 500ms ease;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
